<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FoxChat</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="name">name</string>
    <string name="search_label">search</string>
    <string name="search_hint">search for contact</string>
    <string name="menu_search">search</string>
    <string name="result_conclusion">Total num</string>
    <string name="title_activity_contact_detail">ContactDetailActivity</string>
    <string name="contact">contacts</string>
    <string name="edit">edit</string>
    <string name="send">send</string>
    <string name="star">star</string>
    <string name="title_activity_edit_contact_detail">Edit Contact</string>
    <string name="cancel_edit">Cancel</string>
    <string name="ensure_edit">Ensure</string>
    <string name="delete_contact">delete contact</string>
    <string name="phone_type">Phone Type</string>
    <string name="edit_yes">edit yes</string>
    <string name="starred_contact">Starred Contacts</string>
    <string name="unstarred_contact">Unstarred Contacts</string>
    <string name="new_contact">New A Contact</string>
    <string name="title_activity_new_contact">NewContactActivity</string>
    <!-- Line Activity -->
    <string name="all_contact">All contacts</string>
    <string name="find">find</string>
    <string name="contacts">contacts</string>
    <!-- phone number type -->
    <string name="TYPE_CUSTOM">CUSTOM</string>
    <string name="TYPE_HOME">HOME</string>
    <string name="TYPE_MOBILE">MOBILE</string>
    <string name="TYPE_WORK">WORK</string>
    <string name="TYPE_FAX_WORK">FAX_WORK</string>
    <string name="TYPE_FAX_HOME">FAX_HOME</string>
    <string name="TYPE_PAGER">PAGER</string>
    <string name="TYPE_OTHER">OTHER</string>
    <string name="TYPE_CALLBACK">CALLBACK</string>
    <string name="TYPE_CAR">CAR</string>
    <string name="TYPE_COMPANY_MAIN">COMPANY_MAIN</string>
    <string name="TYPE_ISDN">ISDN</string>
    <string name="TYPE_MAIN">MAIN</string>
    <string name="TYPE_OTHER_FAX">OTHER_FAX</string>
    <string name="TYPE_RADIO">RADIO</string>
    <string name="TYPE_TELEX">TELEX</string>
    <string name="TYPE_TTY_TDD">TTY_TDD</string>
    <string name="TYPE_WORK_MOBILE">WORK_MOBILE</string>
    <string name="TYPE_WORK_PAGER">WORK_PAGER</string>
    <string name="TYPE_ASSISTANT">ASSISTANT</string>
    <string name="TYPE_MMS">MMS</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- sms list item -->
    <string name="draft">[Draft]</string>
    <string name="smsSendName">10010</string>
    <string name="number">(56)</string>
    <string name="smsContent">Hello, do you love me?</string>
    <string name="date">2015/01/01</string>
    <string name="new_message">New Message</string>
    <string name="title_activity_message_conversation">MessageConversationActivity</string>
    <string name="query_hint">search for contact and message</string>
    <string name="back">Back</string>
    <string name="conversation">concersation</string>
    <string name="addContact">Add Contact</string>
    <string name="share">Share</string>
    <string name="label">Work</string>
    <string name="location">Beijing</string>
    <string name="subheader">Toady</string>
    <!-- Date apart -->
    <string name="within_one_hour">Within One hour</string>
    <string name="within_one_day">Within One Day</string>
    <string name="within_two_day">Within Two Day</string>
    <string name="within_one_week">Within One Week</string>
    <string name="within_one_month">Within One Month</string>
    <string name="within_one_year">Within One Year</string>
    <string name="over_one_hour">Over One Year</string>
    <string name="call_hint">Input number or letter</string>
    <string name="title_activity_quick_contact">QucikContactActivity</string>
    <string name="title_activity_contact_message_display">ContactMessageDisplayActivity</string>
    <string name="title_activity_edit_contact">EditContactActivity</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="ringtone">Ringtone</string>
    <string name="addNote">Add Note</string>
    <string name="addAnotherField">ADD ANOTHER FIELD</string>
    <string name="website">Website</string>
    <string name="im">Instant message</string>
    <string name="all">All</string>
    <string name="title_activity_call_number">CallNumberActivity</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="welcome">Welcome you! Fox chat</string>

</resources>
