<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mes_con_toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#2196F3"
    app:popupTheme="@style/MyMaterialTheme"
    app:theme="@style/MyMaterialTheme">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/back"
            android:textColor="#C5E1A5"
            android:textSize="18sp" />

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:gravity="center"
            android:text="@string/conversation"
            android:textColor="#C5E1A5"
            android:textSize="18sp" />

        <Button
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/edit"
            android:textColor="#C5E1A5"
            android:textSize="18sp" />

    </LinearLayout>
</android.support.v7.widget.Toolbar>