<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="10dp">

    <TextView
        android:id="@+id/subheader"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/subheader"
        android:fontFamily="roboto"
        android:gravity="center_vertical"
        android:layout_marginLeft="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="16dp">

        <com.wangyeming.custom.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/avatar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/white_fox"
            app:border_color="#FFFFFF"
            app:border_width="2dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/name"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/call_png"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:src="@drawable/ic_call_made_black_18dp" />

                <TextView
                    android:id="@+id/label"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/label"
                    android:textColor="#9E9E9E"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/date"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/date"
                    android:textColor="#9E9E9E"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/location"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="center_vertical"
                    android:text="@string/location"
                    android:textColor="#9E9E9E"
                    android:textSize="12sp" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:src="@drawable/line_grey" />

</LinearLayout>